# lynchpin

./: Cargo.toml  README.md
.github/workflows/: update.yml
result/: diff.json  result.json
src/: init.rs  json.rs  main.rs
